--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Install Toolchain
       run: |
         mkdir .toolchain
-        wget https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz -o .toolchain/arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz 
-        tar xf .toolchain/arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz -C .toolchain
+        wget https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz
+        tar xf arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz -C .toolchain
+        rm -rf arm-gnu-toolchain-14.3.rel1-x86_64-arm-none-eabi.tar.xz 
     - name: Install SDK
       run: |
         mkdir .sdk
