Update release.yml to fix typo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         submodules: recursive
     - name: Install nRF util
       run: |
-        mkdir -p .toolhttps://files.nordicsemi.com/ui/api/v1/download?repoKey=swtools&path=external/nrfutil/executables/x86_64-unknown-linux-gnu/nrfutil
+        mkdir -p .tool
         wget -r -nd --no-parent 'https://files.nordicsemi.com/ui/api/v1/download?repoKey=swtools&gitpath=external/nrfutil/executables/x86_64-unknown-linux-gnu/nrfutil'
         mv download\?repoKey\=swtools\&path\=external%2Fnrfutil%2Fexecutables%2Fx86_64-unknown-linux-gnu%2Fnrfutil .tool/nrfutil
         chmod +x .tool/nrfutil
