--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,7 @@ jobs:
     - name: Install nRF util
       run: |
         mkdir -p .tool
-        wget -r -nd --no-parent 'https://files.nordicsemi.com/ui/api/v1/download?repoKey=swtools&gitpath=external/nrfutil/executables/x86_64-unknown-linux-gnu/nrfutil'
-        mv download\?repoKey\=swtools\&path\=external%2Fnrfutil%2Fexecutables%2Fx86_64-unknown-linux-gnu%2Fnrfutil .tool/nrfutil
+        curl 'https://files.nordicsemi.com/ui/api/v1/download?repoKey=swtools&path=external/nrfutil/executables/x86_64-unknown-linux-gnu/nrfutil&isNativeBrowsing=false' --output .tool/nrfutil
         chmod +x .tool/nrfutil
         .tool/nrfutil install nrf5sdk-tools --force
     - name: Install Toolchain
