Fixing minor bugs in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,12 +48,10 @@ jobs:
       with:
         body_path: CHANGELOG.txt
         draft: true
-        # note you'll typically need to create a personal access token
-        # with permissions to create releases in the other repo
-        token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
         files: |
           dist/mdk-dongle.hex
-          dist/mdk-dongle-fwupdate.zip
+          dist/mdk-dongle-fwupdate.uf2
           dist/pca10059.hex
           dist/pca10059-fwupdate.zip
           
