--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,11 @@ name: C/C++ compile & release CI for me
 
 on:
   push:
+    tags:
+    - "v*.*.*"
+  pull_request:
+    tags:
+    - "v*.*.*"
 
 jobs:
   build:
