--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,13 @@ jobs:
         mkdir -p dist
         make dist NRFUTIL=.tool/nrfutil SDK_ROOT=$(pwd)/.sdk/nRF5_SDK_17.1.0_ddde560
         make dist PLATFORM=BOARD_MDK_DONGLE NRFUTIL=.tool/nrfutil SDK_ROOT=$(pwd)/.sdk/nRF5_SDK_17.1.0_ddde560
+   
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v4
+      with:
+          path: |
+            dist
+    
     - name: Pushing release
       uses: softprops/action-gh-release@v2
       if: github.ref_type == 'tag'
